<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/amount"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/et_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_outcome"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/red"
            android:text="@string/outcome"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_income"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/green"
            android:text="@string/income"
            android:textSize="22sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/transaction_description"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="22sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="01/01/2020"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <ImageButton
            android:id="@+id/btn_date"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_calendar" />


    </LinearLayout>


    <Button
        android:id="@+id/btn_accept"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/colorAccent"
        android:text="Aceptar"
        android:textSize="22sp" />

</LinearLayout>